k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamzip
  labels:
    app: streamzip
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: streamzip
